get one Payment Method
